# matmul-cache-optimizations

./: CMakeLists.txt  LICENSE  README.md  sample_output.txt
include/: blockmul.hpp  gemm.hpp
include/gemm-cache-optimizations/: gemm.hpp
src/: blockmul.cpp  gemm.cpp  main.cpp  mainblock.cpp
